Add Traditional Chinese localization

--- a/SpendSmart/zh-Hant.lproj/Localizable.strings
+++ b/SpendSmart/zh-Hant.lproj/Localizable.strings
@@ -24,3 +24,60 @@
 "Cancel" = "取消";
 "Error" = "錯誤";
 "Update Check" = "檢查更新";
+"Loading receipts..." = "載入收據中...";
+"No receipts found." = "尚未找到收據";
+"Spending Map" = "消費地圖";
+"View your spending patterns by location" = "依地點檢視您的消費模式";
+"Spending Breakdown" = "消費分類";
+"Spending Summary" = "消費摘要";
+"New Expense" = "新增花費";
+"Actual Spent" = "實際支出";
+"Tax Paid" = "已付稅金";
+"Savings" = "節省金額";
+"Select a Receipt Image" = "選擇收據圖片";
+"Take a photo of your receipt or select one from your gallery" = "拍攝收據照片或從相簿選擇";
+"Camera" = "相機";
+"Gallery" = "相簿";
+"Take multiple photos for long receipts" = "長收據可拍多張照片";
+"Process Receipt" = "處理收據";
+"Add Expense" = "新增花費";
+"The images you provided don't appear to contain valid receipts. Please try again with clear photos of actual receipts." = "您提供的影像似乎不是有效的收據，請重新以清晰照片拍攝真實收據。";
+"Validating Receipt" = "驗證收據中";
+"Extracting Text" = "擷取文字中";
+"Analyzing Receipt" = "分析收據中";
+"Saving to Database" = "儲存到資料庫";
+"Complete!" = "完成！";
+"Error Processing Receipt" = "處理收據時發生錯誤";
+"Invalid Receipt" = "無效收據";
+"Checking if image contains a valid receipt..." = "檢查影像是否為有效收據...";
+"Reading receipt details..." = "讀取收據細節...";
+"Identifying items and prices..." = "辨識品項與價格...";
+"Adding to your expenses..." = "加入您的支出紀錄...";
+"Receipt processed successfully!" = "收據處理完成！";
+"Sorry, couldn't process this receipt" = "抱歉，無法處理此收據";
+"This doesn't appear to be a valid receipt" = "看起來不是有效的收據";
+"Filter by Date" = "依日期篩選";
+"Select Date:" = "選擇日期：";
+"Or Date Range:" = "或日期範圍：";
+"to" = "至";
+"ITEMS" = "項目";
+"Receipt Total" = "收據總額";
+"Tax" = "稅金";
+"Original Price" = "原價";
+"Converted to" = "換算為";
+"Rates:" = "匯率：";
+"Location" = "位置";
+"Items" = "項目";
+"Edit" = "編輯";
+"Current zoom:" = "目前縮放：";
+"Pinch to zoom, drag to pan" = "雙指縮放，拖曳可移動";
+"Double-tap to zoom in" = "雙擊放大";
+"Delete" = "刪除";
+"Keep" = "保留";
+"Done" = "完成";
+"Continue" = "繼續";
+"Use Photo" = "使用照片";
+"Retake" = "重拍";
+"Capture Multiple Images" = "多張拍攝";
+"Clear Images" = "清除圖片";
+"Are you sure you want to delete this receipt from %@? This action cannot be undone." = "確定要刪除來自 %@ 的收據？此動作無法復原。";
